# MarketingPipeline

./: .gitignore  AGENTS.md  Blueprint_v1.md  CLAUDE.md  README.md  docker-compose.yml  run-dev.sh  skills-lock.json
src/backend/: .coverage  .env.example  pyproject.toml
src/backend/alembic/: env.py
src/backend/alembic/versions/: a92a46347f70_phase01_initial_schema.py  b1c2d3e4f5a6_phase02_documents_runs_seed_leads.py  c2d3e4f5a6b7_phase03_review_icp_config.py  d3e4f5a6b7c8_phase04_source_registry_policy.py  e4f5a6b7c8d9_phase05_crawl_artifacts.py  f5a6b7c8d9e0_phase06_classification_extraction.py
src/backend/api/: __init__.py  main.py
src/backend/api/routes/: clients.py  crawl.py  documents.py  extraction.py  health.py  lead_imports.py  review.py  source.py
src/backend/core/: settings.py
src/backend/core/adapters/: base.py  mock_crawl.py  mock_email_verifier.py  mock_enrichment.py  mock_llm.py  mock_search.py  registry.py
src/backend/scripts/: seed_sample.py
src/backend/tests/: conftest.py  test_adapters.py  test_chunking_service.py  test_client_contracts.py  test_client_service.py  test_clients_api.py  test_crawl_api.py  test_crawl_service.py  test_db_session.py  test_document_service.py  test_documents_api.py  test_extraction_api.py  test_extraction_service.py  test_health.py  test_health_contract.py  test_health_service.py  test_icp_contracts.py  test_lead_import_service.py  test_parser_service.py  test_review_api.py  test_review_service.py  test_seed_lead_service.py  test_source_api.py  test_source_service.py  test_storage_adapter.py
(+159 files in other folders)
